# Phantom

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  GEMINI.md  PRD.MD  PROGRESS.md  README.md
phantom-backend/: main.py  pyproject.toml  resume.txt  test_api.py  test_leap.py  test_scraper.py
phantom-backend/src/: graph.py  main.py
phantom-backend/src/api/: routes.py  socket_manager.py
phantom-backend/src/core/: config.py
phantom-backend/src/models/: schemas.py
phantom-backend/src/nodes/: applier.py  drafter.py  extractor.py  logger.py  scorer.py  scraper.py  selector.py  validator.py
phantom-backend/src/services/: applier.py  notion_service.py
phantom-backend/src/state/: graph_state.py
phantom-extension/: package-lock.json  package.json  tsconfig.tsbuildinfo
phantom-extension/src/background/: index.ts
phantom-extension/src/components/: CredentialsTab.tsx  StatusCard.tsx  StopButton.tsx
phantom-extension/src/contents/: applier.ts  extractor.ts  filler.ts  page-classifier.ts
phantom-extension/src/lib/: api.ts  types.ts
phantom-extension/src/popup/: index.tsx  styles.css
