[project]
name = "phantom-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "crawl4ai>=0.8.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.41.0",
    "notion-client>=2.2.1",
]
